--- a/src/App/index.css
+++ b/src/App/index.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#container {
+  margin: auto;
+  width: 40%;
+  height: 100vh;
+  border: 1px solid black;
+  display: grid;
+  grid: repeat(10, 1fr) / 1fr 2fr 1fr;
+  grid-template-areas:
+    '. . .'
+    '. search .'
+    '. filter .'
+    '.  table .'
+    '.  table .'
+    '.  table .'
+    '.  table .'
+    '.  table .'
+    '.  table .'
+    '. . .';
+  align-items: start;
 }
