--- a/src/App/index.css
+++ b/src/App/index.css
@@ -1,20 +1,18 @@
 #container {
   margin: auto;
-  width: 40%;
+  width: 100%;
   height: 100vh;
-  border: 1px solid black;
+  background-image: linear-gradient(
+    rgb(121, 190, 255),
+    white,
+    rgb(109, 182, 241)
+  );
   display: grid;
-  grid: repeat(10, 1fr) / 1fr 2fr 1fr;
+  grid: 1fr 2fr 1fr 12fr 1fr / 4fr 4fr 1fr 3fr;
   grid-template-areas:
-    '. . .'
-    '. search .'
-    '. filter .'
-    '.  table .'
-    '.  table .'
-    '.  table .'
-    '.  table .'
-    '.  table .'
-    '.  table .'
-    '. . .';
-  align-items: start;
+    '. . . .'
+    '. . . .'
+    '. search . button'
+    '. table . filters'
+    '. . . .';
 }
