--- a/src/SearchFilterTable/index.css
+++ b/src/SearchFilterTable/index.css
@@ -1,3 +1,8 @@
 .search-filter-table {
-  grid-area: filter;
+  grid-area: filters;
+  align-self: start;
+  justify-self: start;
+  border: 1px double cadetblue;
+  border-radius: 5px;
+  background-color: whitesmoke;
 }
