--- a/src/App/index.css
+++ b/src/App/index.css
@@ -8,9 +8,8 @@
     rgb(109, 182, 241)
   );
   display: grid;
-  grid: 1fr 2fr 1fr 12fr 1fr / 4fr 4fr 1fr 3fr;
+  grid: 2fr 1fr 12fr 1fr / 4fr 4fr 1fr 3fr;
   grid-template-areas:
-    '. . . .'
     '. . . .'
     '. search . button'
     '. table . filters'
