--- a/src/SearchBar/index.css
+++ b/src/SearchBar/index.css
@@ -6,16 +6,17 @@
 
 .search-input input {
   width: 50%;
-  height: 10%;
-  padding: 10px;
-  border-radius: 40px;
+  height: 1rem;
+  padding: 0.7rem;
+  border-radius: 3rem;
+  font-size: 1.6rem;
   outline: none;
 }
 
 .search-input button {
-  height: 50%;
+  height: 3rem;
   width: 5%;
-  margin-left: 3px;
+  margin-left: 0.3rem;
   border: none;
   outline: none;
   background: url('https://cdn3.iconfinder.com/data/icons/instagram-18/512/194_Instagram_Search_Sets-512.png')
