--- a/src/WeatherTable/index.css
+++ b/src/WeatherTable/index.css
@@ -1,34 +1,40 @@
-.weather-table {
+.table-wrapper {
   grid-area: table;
+  overflow: auto;
+}
+
+.weather-table {
   border: 7px double white;
-  border-radius: 30px;
+  border-radius: 3rem;
   background-color: rgb(63, 154, 240);
+  table-layout: fixed;
   width: 100%;
-  padding: 40px;
-  padding-top: 20px;
+  padding: 3rem;
+  padding-top: 2rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .weather-table td {
-  font-size: 120%;
+  font-size: 2rem;
   text-align: center;
   white-space: nowrap;
-  padding: 10px;
+  padding: 1rem;
   color: white;
 }
 
 th {
-  font-size: 150%;
-  padding: 15px;
+  font-size: 2.5rem;
+  padding-top: 1.5rem;
 }
 
 #icon-td {
   display: flex;
   flex-direction: column;
+  font-size: 1.2rem;
 }
 
 #temperature-td {
-  font-size: 300%;
+  font-size: 7rem;
 }
 
 #icon-td,
