Add responsive button dimensions

--- a/src/ShowFiltersButton/index.css
+++ b/src/ShowFiltersButton/index.css
@@ -2,7 +2,7 @@
   grid-area: button;
   align-self: end;
   justify-self: start;
-  width: 8%;
+  width: 3rem;
   height: 3rem;
   background: url('https://library.kissclipart.com/20190912/wlq/kissclipart-adjust-icon-configuration-icon-filter-icon-bb04dfd66683ff54.png')
     no-repeat;
