--- a/src/SearchBar/index.css
+++ b/src/SearchBar/index.css
@@ -15,7 +15,7 @@
 
 .search-input button {
   height: 3rem;
-  width: 5%;
+  width: 3rem;
   margin-left: 0.3rem;
   border: none;
   outline: none;
