--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -18,15 +18,44 @@
 
 @media (max-width: 1040px) {
   html {
-    font-size: 90%;
+    font-size: 80%;
   }
 
   #container {
-    grid: 2fr 1fr 10fr 3fr / 3fr 5fr 5fr 3fr;
+    min-height: 100vh;
+    height: 100%;
+    grid: 2fr 1fr 1fr 10fr / 3fr 2fr 1fr 5fr 3fr;
     grid-template-areas:
-      '. . . .'
-      '. search search .'
-      '. table table .'
-      '. button filters .';
+      '. . . . .'
+      '. search search search .'
+      '. button filters filters .'
+      '. table table table .';
+  }
+}
+
+@media (max-width: 700px) {
+  html {
+    font-size: 70%;
+  }
+
+  #container {
+    grid: 2fr 1fr 1fr 10fr / 1fr 3fr 4fr;
+    grid-template-areas:
+      '. . .'
+      'search search search'
+      'button filters filters'
+      'table table table';
+  }
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 60%;
+  }
+}
+
+@media (max-width: 300px) {
+  html {
+    font-size: 50%;
   }
 }
